--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -9,7 +9,6 @@
     "outDir": "./dist",
     "resolveJsonModule": true
   },
-  "extends": [],
-  "include": ["src/**/*.ts", "tests/**/*.ts"],
+  "include": ["src/**/*.ts"],
   "exclude": ["node_modules"]
 }
