--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --exec ts-node --transpile-only src/index.ts | pino-pretty",
+    "dev": "nodemon --exec ts-node --transpile-only src/index.ts",
+    "tunnel": "lt --port 3000 --subdomain ce395backend",
+    "start-all": "concurrently \"npm run dev\" \"npm run tunnel\"",
+    "migrate": "npx prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -24,7 +27,9 @@
   "devDependencies": {
     "@types/express": "^5.0.1",
     "@types/node": "^22.13.13",
-    "nodemon": "^3.1.9",
+    "concurrently": "^9.1.2",
+    "localtunnel": "^2.0.2",
+    "nodemon": "^3.1.10",
     "pino-pretty": "^13.0.0",
     "prisma": "^6.7.0",
     "ts-node": "^10.9.2",
