--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,13 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev ": "nodemon --exec ts-node --transpile-only src/index.html"
+    "dev": "npx live-server"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "nodemon": "^3.1.10"
+  }
 }
