--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "npx live-server .",
+    "dev": "live-server --port=8080",
     "tunnel": "cloudflared tunnel --url http://localhost:8080 --hostname ce395frontend",
     "start": "concurrently \"npm run dev\" \"npm run tunnel\""
   },
