--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --exec ts-node --transpile-only src/index.ts",
-    "tunnel": "npx localtunnel --port 3000 --subdomain ce395backend",
+    "tunnel": "cloudflared tunnel --url http://localhost:3000",
     "migrate": "npx prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
