--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nodemon --exec ts-node --transpile-only src/index.ts",
     "tunnel": "cloudflared tunnel --url http://localhost:3000",
+    "back": "npx localtunnel --port 3000 --subdomain biwbong",
     "migrate": "npx prisma migrate dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
