--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "npx ts-node --transpile-only src/index.ts",
+    "dev": "nodemon --exec ts-node --transpile-only src/index.ts",
     "tunnel": "cloudflared tunnel --url http://localhost:3000",
     "back": "npx localtunnel --port 3000 --subdomain biwbong",
     "migrate": "npx prisma migrate dev",
